Clean up enrollment (ie fix error message and complete redirect)

--- a/client/src/heartsteps/enrollment/enroll.html
+++ b/client/src/heartsteps/enrollment/enroll.html
@@ -2,6 +2,7 @@
     [formGroup]="enrollmentForm"
     (onSubmit)="enroll()"
     submitLabel="Enroll"
+    [error]="error"
     >
     <p>Enter the entry token included in the invitation letter you received in the mail.</p>
     <app-text-field
