Fix suggestion time not loading or saving correctly

--- a/client/src/pages/activity-plan/create-plan.page.html
+++ b/client/src/pages/activity-plan/create-plan.page.html
@@ -7,6 +7,7 @@
         [formGroup]="planForm"
         submitLabel="Create plan"
         (onSubmit)="create()"
+        [error]="error"
         >
         <activity-plan-field
             formControlName="activityPlan"
