Allow activity logs to be created

--- a/client/src/pages/home/stats.page.html
+++ b/client/src/pages/home/stats.page.html
@@ -1,4 +1,4 @@
-<activity-log-daily-summary *ngFor="let summary of dailySummaries"
-    [dailySummary]="summary"
+<activity-log-daily-summary *ngFor="let day of days"
+    [date]="day"
     >
 </activity-log-daily-summary>
