Fix typo in "my plan"

--- a/client/src/pages/dashboard/dashboard.html
+++ b/client/src/pages/dashboard/dashboard.html
@@ -21,6 +21,6 @@
 </article>
 <activity-plan-day 
     [date]="today"
-    label="My play today"
+    label="My plan today"
     >
 </activity-plan-day>
