--- a/client/src/pages/home/dashboard.page.html
+++ b/client/src/pages/home/dashboard.page.html
@@ -16,8 +16,8 @@
 <article>
     <h3>My progress</h3>
     <heartsteps-weekly-progress></heartsteps-weekly-progress>
-    <heartsteps-daily-summary [date]="today"></heartsteps-daily-summary>
-    <heartsteps-activity-daily-update [date]="today"></heartsteps-activity-daily-update>
+    <heartsteps-daily-summary [summary]="summary"></heartsteps-daily-summary>
+    <heartsteps-activity-daily-update [summary]="summary"></heartsteps-activity-daily-update>
 </article>
 <activity-plan-day 
     [date]="today"
