--- a/client/src/pages/activity-plan/activity-plan.page.html
+++ b/client/src/pages/activity-plan/activity-plan.page.html
@@ -11,6 +11,7 @@
     </a>
     <a *ngIf="activityPlan.activityLogId"
         (click)="goToActivityLog()"
+        class="edit-activity-log-banner"
         >
         Edit activity log
     </a>
