Add highlight to "today"

--- a/client/src/heartsteps/daily-summaries/daily-summary.html
+++ b/client/src/heartsteps/daily-summaries/daily-summary.html
@@ -1,5 +1,5 @@
 <h3>{{formattedDate}}</h3>
-<p class="headline">{{totalMinutes}} minutes</p>
+<p>{{totalMinutes}} minutes</p>
 <ul class="horizontal">
     <li>{{moderateMinutes}} min <span>Moderate</span></li>
     <li>{{vigorousMinutes}} min <span>Vigerous</span></li>
