Fixed misspelling "vigorous"

--- a/client/src/heartsteps/daily-summaries/daily-summary.html
+++ b/client/src/heartsteps/daily-summaries/daily-summary.html
@@ -2,7 +2,7 @@
 <p>{{totalMinutes}} minutes</p>
 <ul class="horizontal">
     <li>{{moderateMinutes}} min <span>Moderate</span></li>
-    <li>{{vigorousMinutes}} min <span>Vigerous</span></li>
+    <li>{{vigorousMinutes}} min <span>Vigorous</span></li>
     <li>{{steps}} <span>Steps</span></li>
     <li>{{miles}} <span>Miles</span></li>
 </ul>
