Add heartsteps privacy policy link to enroll page

--- a/client/src/heartsteps/enrollment/enroll.html
+++ b/client/src/heartsteps/enrollment/enroll.html
@@ -15,4 +15,5 @@
         label="Birth year"
         >
     </app-year-field>
+    <p>By enrolling in HeartSteps, you are agreeing to <a (click)="openPrivacyPolicy()">HeartSteps Privacy Policy.</a></p>
 </app-form>
