Make grammar more consistent

--- a/client/src/heartsteps/fitbit/fitbit-app.html
+++ b/client/src/heartsteps/fitbit/fitbit-app.html
@@ -1,9 +1,9 @@
 <ion-header>
         <ion-navbar>
-            <ion-title>FitBit</ion-title>
+            <ion-title>Fitbit</ion-title>
         </ion-navbar>
     </ion-header>
     <ion-content padding>
-        <p>Install the HeartSteps FitBit application.</p>
+        <p>Install the HeartSteps Fitbit application.</p>
         <button class="heartsteps-primary-button" (click)="checkConnection()">Check connection</button>
     </ion-content>
