--- a/client/src/heartsteps/fitbit/fitbit-auth.html
+++ b/client/src/heartsteps/fitbit/fitbit-auth.html
@@ -1,2 +1,2 @@
-<p>Connect your FitBit with HeartSteps to track your physical activity.</p>
-<button class="heartsteps-primary-button" (click)="getAuthorization()">Connect to FitBit</button>
+<p>Connect your Fitbit with HeartSteps to track your physical activity.</p>
+<button class="heartsteps-primary-button" (click)="getAuthorization()">Connect to Fitbit</button>
