--- a/client/src/pages/settings/places-page.html
+++ b/client/src/pages/settings/places-page.html
@@ -1,5 +1,5 @@
 <app-page
-    title="My Locations"
+    title="Places"
     (onDismiss)="goBack()"
     >
     <heartsteps-places-list (saved)="goBack()"></heartsteps-places-list>
