--- a/client/src/pages/settings/settings-page.html
+++ b/client/src/pages/settings/settings-page.html
@@ -3,7 +3,7 @@
         <nav>
             <ul>
                 <li><button (click)="editContactInformation()">Contact information</button></li>
-                <li><button (click)="editPlaces()">My locations</button></li>
+                <li><button (click)="editPlaces()">Places</button></li>
                 <li><button (click)="editWeeklyReflectionTime()">Weekly reflection time</button></li>
                 <li><button (click)="editWeeklyGoal()">Weekly goal</button></li>
                 <li><button (click)="editDailyTimes()">Activity suggestion time</button></li>
