--- a/client/src/pages/welcome/welcome.html
+++ b/client/src/pages/welcome/welcome.html
@@ -6,3 +6,4 @@
     </div>
 </div>
 <button (click)="goToEnrollPage()">Enroll</button>
+<p style="margin:1em;flex-grow:0;text-align: center;">Heartsteps {{buildVersion}}, built on {{buildDate}}.</p>
