--- a/client/src/pages/activity-log/activity-log.page.html
+++ b/client/src/pages/activity-log/activity-log.page.html
@@ -1,4 +1,4 @@
-<app-page
+<app-modal
     title="Activity Log"
     dismiss="Cancel"
     (onDismiss)="dismiss()"
@@ -19,4 +19,4 @@
         >
         Delete
     </button>
-</app-page>
+</app-modal>
