--- a/client/src/pages/activity-plan/activity-plan-complete.page.html
+++ b/client/src/pages/activity-plan/activity-plan-complete.page.html
@@ -1,4 +1,4 @@
-<app-page
+<app-modal
     title="Complete Activity Plan"
     (onDismiss)="dismiss()"
     >
@@ -23,4 +23,4 @@
             >
         </app-range-field>
     </app-form>
-</app-page>
+</app-modal>
