--- a/client/src/pages/activity-plan/create-plan.page.html
+++ b/client/src/pages/activity-plan/create-plan.page.html
@@ -1,4 +1,4 @@
-<app-page
+<app-modal
     title="Create Activity Plan"
     (onDismiss)="back()"
     dismiss="Cancel"
@@ -14,4 +14,4 @@
             >
         </activity-plan-field>
     </app-form>
-</app-page>
+</app-modal>
