--- a/client/src/pages/settings/contact-page.html
+++ b/client/src/pages/settings/contact-page.html
@@ -1,4 +1,4 @@
-<app-page
+<app-modal
     title="Contact Information"
     (onDismiss)="goBack()"
     >
@@ -6,4 +6,4 @@
         (saved)="goBack()"
         >
     </heartsteps-participant-information>
-</app-page>
+</app-modal>
