--- a/client/src/pages/settings/goal.page.html
+++ b/client/src/pages/settings/goal.page.html
@@ -1,6 +1,6 @@
-<app-page
+<app-modal
     title="Weekly Goal"
     (onDismiss)="goBack()"
     >
     <heartsteps-weekly-goal [week]="week" (saved)="saved()"></heartsteps-weekly-goal>
-</app-page>
+</app-modal>
