--- a/client/src/pages/settings/places-page.html
+++ b/client/src/pages/settings/places-page.html
@@ -1,6 +1,6 @@
-<app-page
+<app-modal
     title="Places"
     (onDismiss)="goBack()"
     >
     <heartsteps-places-list (saved)="goBack()"></heartsteps-places-list>
-</app-page>
+</app-modal>
