--- a/client/src/pages/settings/reflection-time-page.html
+++ b/client/src/pages/settings/reflection-time-page.html
@@ -1,6 +1,6 @@
-<app-page
+<app-modal
     title="Weekly Reflection Time"
     (onDismiss)="goBack()"
     >
     <weekly-reflection-time (saved)="goBack()"></weekly-reflection-time>
-</app-page>
+</app-modal>
