--- a/client/src/pages/activity-plan/activity-plan.page.html
+++ b/client/src/pages/activity-plan/activity-plan.page.html
@@ -1,4 +1,4 @@
-<app-page
+<app-modal
     title="Activity Plan"
     dismiss="Cancel"
     (onDismiss)="dismiss()"
@@ -28,4 +28,4 @@
     </app-form>
     <button *ngIf="!activityPlan.complete" (click)="delete()" class="danger">Delete</button>
     <button *ngIf="activityPlan.complete" (click)="uncomplete()">Mark incomplete</button>
-</app-page>
+</app-modal>
