--- a/client/src/pages/settings/suggestion-times.html
+++ b/client/src/pages/settings/suggestion-times.html
@@ -1,4 +1,4 @@
-<app-page
+<app-modal
     title="Suggestion Times"
     (onDismiss)="goBack()"
     >
@@ -6,4 +6,4 @@
         (saved)="goBack()"
         >
     </heartsteps-walking-suggestion-times>
-</app-page>
+</app-modal>
