Add activity-log-form component with effort and enjoyed fields

--- a/client/src/pages/activity-log/activity-log-create.page.html
+++ b/client/src/pages/activity-log/activity-log-create.page.html
@@ -2,13 +2,9 @@
     title="Create activity log"
     (onDismiss)="dismiss()"
     >
-    <app-form
-        [formGroup]="form"
-        (onSubmit)="create()"
+    <activity-log-form
+        [activityLog]="activityLog"
+        (onSubmit)="create($event)"
         >
-        <activity-log-field
-            formControlName="activityLog"
-            >
-        </activity-log-field>
-    </app-form>
+    </activity-log-form>
 </app-modal>
