--- a/client/src/pages/activity-plan/activity-plan-complete.page.html
+++ b/client/src/pages/activity-plan/activity-plan-complete.page.html
@@ -20,6 +20,7 @@
         <app-range-field
             formControlName="effort"
             label="How much will power did it take to complete this activity?"
+            [options]="effortOptions"
             >
         </app-range-field>
     </app-form>
