Don't display moderate or vigorous minutes, just 'earned' minutes

--- a/client/src/heartsteps/daily-summaries/daily-summary.html
+++ b/client/src/heartsteps/daily-summaries/daily-summary.html
@@ -1,8 +1,5 @@
-<h3>{{formattedDate}}</h3>
-<p>{{totalMinutes}} minutes</p>
-<ul class="horizontal">
-    <li>{{moderateMinutes}} min <span>Moderate</span></li>
-    <li>{{vigorousMinutes}} min <span>Vigorous</span></li>
+<ul>
     <li>{{steps}} <span>Steps</span></li>
     <li>{{miles}} <span>Miles</span></li>
+    <li>{{totalMinutes}} min<span>Earned</span></li>
 </ul>
