--- a/client/src/pages/home/dashboard.page.html
+++ b/client/src/pages/home/dashboard.page.html
@@ -19,6 +19,7 @@
 <article>
     <h3>My progress</h3>
     <heartsteps-weekly-progress></heartsteps-weekly-progress>
+    <h3><span>Today,</span> {{formattedDate}}</h3>
     <heartsteps-daily-summary [summary]="summary"></heartsteps-daily-summary>
     <heartsteps-activity-daily-update [summary]="summary"></heartsteps-activity-daily-update>
 </article>
