Move banner to page-control

--- a/client/src/pages/activity-plan/activity-plan.page.html
+++ b/client/src/pages/activity-plan/activity-plan.page.html
@@ -10,10 +10,10 @@
         Complete
     </a>
     <a *ngIf="activityPlan.activityLogId"
+        app-page-control
         (click)="goToActivityLog()"
-        class="edit-activity-log-banner"
         >
-        Edit activity log
+        Edit
     </a>
     <app-form
         [formGroup]="planForm"
