Replace form with app-form

--- a/client/src/heartsteps/contact-information/participant-information.html
+++ b/client/src/heartsteps/contact-information/participant-information.html
@@ -1,4 +1,7 @@
-<form *ngIf="contactInformationForm" [formGroup]="contactInformationForm">
+<app-form
+    [formGroup]="contactInformationForm"
+    (onSubmit)="save()"
+    >
     <fieldset>
         <legend>What do you want to be called?</legend>
         <app-text-field
@@ -21,7 +24,4 @@
             >
         </app-phone-field>
     </fieldset>
-    <div class="controls">
-        <button (click)="save()">Save</button>
-    </div>
-</form>
+</app-form>
