Various website tweaks

--- a/client/src/pages/enrollment/complete.page.html
+++ b/client/src/pages/enrollment/complete.page.html
@@ -9,4 +9,5 @@
     <p>After you have worn your Fitbit for a week, you will receive a text message from the study with a link to the HeartSteps app. Please install the app on your phone. You will need your <em>Entry Code</em> and your birth year to login to the app. Refer to the instructions included in the mailing.</p>
     <p>Please don't hresitate to call us at <em>[Study Phone Number]</em> if you have questions or need assistance.</p>
     <p>We will call you in about a week to check in and see how things are going.</p>
+    <button (click)="logout()">Logout</button>
 </app-page>
