Update start-screen styles for morning message

--- a/client/src/pages/morning-survey/morning-survey.page.html
+++ b/client/src/pages/morning-survey/morning-survey.page.html
@@ -1,1 +1,7 @@
-<heartsteps-stepper param="page" [steps]="pages" (at-end)="finish()"></heartsteps-stepper>
+<heartsteps-stepper
+    class="start-screen"
+    param="page"
+    [steps]="pages"
+    (at-end)="finish()"
+    >
+</heartsteps-stepper>
