Update enrollment to use login

--- a/client/src/heartsteps/enrollment/enroll.html
+++ b/client/src/heartsteps/enrollment/enroll.html
@@ -15,5 +15,5 @@
         label="Birth year"
         >
     </app-year-field>
-    <p>By loging into HeartSteps, you are agreeing to <a (click)="openPrivacyPolicy()">HeartSteps Privacy Policy.</a></p>
+    <p>By logging into HeartSteps, you are agreeing to <a (click)="openPrivacyPolicy()">HeartSteps Privacy Policy.</a></p>
 </app-form>
