--- a/client/src/pages/enrollment/enrollment.page.html
+++ b/client/src/pages/enrollment/enrollment.page.html
@@ -6,7 +6,7 @@
     <app-form
         [formGroup]="form"
         (onSubmit)="enroll()"
-        submitLabel="Enroll"
+        submitLabel="Login"
         [error]="error"
         >
         <p>Enter the entry token included in the invitation letter you received in the mail.</p>
@@ -20,6 +20,6 @@
             label="Birth year"
             >
         </app-year-field>
-        <p>By enrolling in HeartSteps, you are agreeing to <a (click)="openPrivacyPolicy()">HeartSteps Privacy Policy.</a></p>
+        <p>By logging into HeartSteps, you are agreeing to <a (click)="openPrivacyPolicy()">HeartSteps Privacy Policy.</a></p>
     </app-form>
 </app-page>
