Change unenroll to logout

--- a/client/src/pages/settings/settings-page.html
+++ b/client/src/pages/settings/settings-page.html
@@ -21,7 +21,7 @@
     </ul>
 </article>
 <article>
-    <h3>Unenroll</h3>
-    <p>This remove from the HeartSteps study. Your data will continue to be saved in the heartsteps server.</p>
-    <button class="danger" (click)="unenroll()">Unenroll</button>
+    <h3>Logout</h3>
+    <p>This will remove all data from your phone, and stop all push notifications.</p>
+    <button class="danger" (click)="unenroll()">Logout</button>
 </article>
