Refactor CSS to keep background gradient in start-screen

--- a/client/src/pages/enrollment/welcome.page.html
+++ b/client/src/pages/enrollment/welcome.page.html
@@ -1,4 +1,4 @@
-<article class="start-screen" style="display:block;">
+<article class="start-screen">
     <h1 class="heartsteps-logo">HeartSteps</h1>
     <button (click)="goToEnrollment()">Login</button>
 </article>
