--- a/client/src/pages/home/dashboard.page.html
+++ b/client/src/pages/home/dashboard.page.html
@@ -1,17 +1,4 @@
-<nav class="banners">
-    <ul>
-        <li *ngIf="weeklySurvey">
-            <a (click)="navigateToWeeklySurvey()">
-                It's time to make your weekly plan and set your goal for the following week.
-            </a>
-        </li>
-        <li *ngIf="morningMessage">
-            <a (click)="navigateToMorningMessage()">
-                Good morning.
-            </a>
-        </li>
-    </ul>
-</nav>
+<dashboard-notifications></dashboard-notifications>
 <heartsteps-anchor-message *ngIf="anchorMessage"
     [message]="anchorMessage"
     >
