Make button not submit form

--- a/client/src/heartsteps/places/places-list.html
+++ b/client/src/heartsteps/places/places-list.html
@@ -8,7 +8,7 @@
         <p>Heartsteps will use these places to customize suggestions for physical activity nearby.</p>
         <ul>
             <li *ngFor="let location of locations">
-                <button 
+                <button type="button"
                     (click)="editLocation(location)"
                     class="place {{location.type}}"
                     (ngClass)="{invalid:location.invalid}"
