Change "Add Place" button so it does not submit form

--- a/client/src/heartsteps/places/places-list.html
+++ b/client/src/heartsteps/places/places-list.html
@@ -17,6 +17,12 @@
                 </button>    
             </li>
         </ul>
-        <button class="bottom" (click)="newLocation()">Add Place</button>
+        <button
+            type="button"
+            class="bottom"
+            (click)="newLocation()"
+            >
+            Add Place
+        </button>
     </fieldset>
 </app-form>
