Update notification to use app-page.start-screen

--- a/client/src/pages/notifications/notification.page.html
+++ b/client/src/pages/notifications/notification.page.html
@@ -1,4 +1,6 @@
-<div class="headline">
-    <p>{{body}}</p>
-</div>
-<button (click)="dismiss()">Ok</button>
+<app-page class="start-screen">
+    <div class="headline">
+        <p>{{body}}</p>
+    </div>
+    <button (click)="dismiss()">Ok</button>
+</app-page>
