Add weather component

--- a/client/src/pages/morning-survey/start.page.html
+++ b/client/src/pages/morning-survey/start.page.html
@@ -1,4 +1,5 @@
 <div class="headline">
     <p>{{message}}</p>
 </div>
+<heartsteps-weather [date]="today"></heartsteps-weather>
 <button (click)="done()">Next</button>
