--- a/client/src/pages/morning-survey/survey.page.html
+++ b/client/src/pages/morning-survey/survey.page.html
@@ -1,3 +1,7 @@
+<heartsteps-weather *ngIf="showWeather"
+    [date]="today"
+    >
+</heartsteps-weather>
 <app-form
     [formGroup]="form"
     submitLabel="Complete"
