Made weather icon change with input from weather service

--- a/client/src/pages/morning-survey/survey.page.html
+++ b/client/src/pages/morning-survey/survey.page.html
@@ -1,6 +1,7 @@
 <heartsteps-weather *ngIf="showWeather"
     [date]="today"
     >
+    Today
 </heartsteps-weather>
 <app-form
     [formGroup]="form"
