--- a/client/src/pages/morning-survey/start.page.html
+++ b/client/src/pages/morning-survey/start.page.html
@@ -1,5 +1,7 @@
 <div class="headline">
     <p>{{message}}</p>
 </div>
-<heartsteps-weather [date]="today"></heartsteps-weather>
+<heartsteps-weather [date]="today">
+    Today
+</heartsteps-weather>
 <button (click)="done()">Next</button>
