--- a/client/src/pages/morning-survey/start.page.html
+++ b/client/src/pages/morning-survey/start.page.html
@@ -4,4 +4,4 @@
 <div class="headline">
     <p>{{message}}</p>
 </div>
-<button (click)="done()">Next</button>
+<button class="heartsteps-primary-button" (click)="done()">Next</button>
