--- a/client/src/pages/weekly-survey/survey-start.html
+++ b/client/src/pages/weekly-survey/survey-start.html
@@ -1,3 +1,3 @@
 <p>Great job this week!</p>
 <p>First, take a moment to reflect on the past week before making a plan for the next week.</p>
-<button (click)="nextPage()">Next</button>
+<button class="heartsteps-primary-button" (click)="nextPage()">Next</button>
