--- a/client/src/pages/home/home.html
+++ b/client/src/pages/home/home.html
@@ -1,7 +1,7 @@
 <header>
     <h2>{{pageTitle}}</h2>
 </header>
-<div class="content">
+<div id="home-content" class="content">
     <router-outlet></router-outlet>
 </div>
 <nav>
