Update language used in onboarding

--- a/client/src/heartsteps/fitbit/fitbit-auth.html
+++ b/client/src/heartsteps/fitbit/fitbit-auth.html
@@ -1,2 +1,3 @@
-<p>Connect your Fitbit with HeartSteps to track your physical activity.</p>
+<p>HeartSteps uses Fitbit to collect information about your physical activity. Activities detected by Fitbit will be shown in HeartSteps.</p>
+<p>Please <strong>allow all permissions</strong> when connecting Fitbit to HeartSteps.</p>
 <button class="heartsteps-primary-button" (click)="getAuthorization()">Connect to Fitbit</button>
