Add notifications settings page

--- a/client/src/pages/settings/settings-page.html
+++ b/client/src/pages/settings/settings-page.html
@@ -2,6 +2,7 @@
     <nav>
         <ul>
             <li><button (click)="editContactInformation()">Contact information</button></li>
+            <li><button (click)="editNotifications()">Notifications</button></li>
             <li><button (click)="editPlaces()">Places</button></li>
             <li><button (click)="editWeeklyReflectionTime()">Weekly reflection time</button></li>
             <li><button (click)="editWeeklyGoal()">Weekly goal</button></li>
