--- a/client/src/pages/settings/settings-page.html
+++ b/client/src/pages/settings/settings-page.html
@@ -24,5 +24,5 @@
 <article>
     <h3>Logout</h3>
     <p>This will remove all data from your phone, and stop all push notifications.</p>
-    <button class="danger" (click)="unenroll()">Logout</button>
+    <button class="danger" (click)="logout()">Logout</button>
 </article>
