Added baseline page to lock application behavior

--- a/client/src/pages/welcome/welcome.html
+++ b/client/src/pages/welcome/welcome.html
@@ -1,7 +1,9 @@
 <app-page
     class="start-screen"
     >
-    <div class="heartsteps-logo">Heartsteps</div>
+    <div>
+        <div class="heartsteps-logo">Heartsteps</div>
+    </div>
     <div class="headline">
         <h1>Welcome!</h1>
         <p>Login and get started.</p>
