--- a/client/src/pages/baseline-week/baseline-week.page.html
+++ b/client/src/pages/baseline-week/baseline-week.page.html
@@ -13,8 +13,8 @@
             app.
         </p>
         <p>
-            <strong>Wear your Fitbit for 8 hours a day, for 7 days.</strong>
-            After 7 days, HeartSteps will start sending you notifications to
+            <strong>Wear your Fitbit for 8 hours a day, for {{baselinePeriod}} days.</strong>
+            After {{baselinePeriod}} days, HeartSteps will start sending you notifications to
             help you be more active.
         </p>
     </section>
@@ -34,7 +34,7 @@
         <button (click)="reload()">Reload data</button>
         <p >Last updated {{format_time_ago(summary.updated)}}</p>
     </section>
-    <section>
+    <section *ngIf="studyContactName && studyContactPhone">
         <h3>Need Help?</h3>
         <p>If you have any issues with the HeartSteps app, or your Fitbit, please call {{studyContactName}} at {{studyContactPhone}}.</p>
     </section>
