--- a/client/src/pages/baseline-week/baseline-week.page.html
+++ b/client/src/pages/baseline-week/baseline-week.page.html
@@ -1,11 +1,6 @@
 <app-page
     title="HeartSteps"
     >
-        <button app-page-control
-            class="settings"
-            (click)="goToSettings()"
-            >Settings
-        </button>
     <section>
         <p>
             We need to establish a baseline measurement of your daily activity,
@@ -38,4 +33,9 @@
         <h3>Need Help?</h3>
         <p>If you have any issues with the HeartSteps app, or your Fitbit, please call {{studyContactName}} at {{studyContactPhone}}.</p>
     </section>
+    <button class="settings"
+        (click)="goToSettings()"
+        >
+        Settings
+    </button>
 </app-page>
