Minor bug fixes

--- a/client/src/heartsteps/daily-summaries/daily-activities-update.html
+++ b/client/src/heartsteps/daily-summaries/daily-activities-update.html
@@ -1,7 +1,6 @@
-<button *ngIf="!loading"
-    (click)="update()"
+<button 
+    (click)="refresh()"
     >
     Update Fitbit data
+    <span>Last updated {{updateTimeFormatted}}</span>
 </button>
-<p *ngIf="!loading">Last updated {{updateTimeFormatted}}</p>
-<button class="is-loading" *ngIf="loading">Updating from data from Fitbit</button>
