#127 Update participant when dashboard opens

--- a/client/src/pages/home/home.html
+++ b/client/src/pages/home/home.html
@@ -1,5 +1,10 @@
 <header>
     <h2>{{pageTitle}}</h2>
+    <span *ngIf="updatingParticipant"
+        class="loading"
+        >
+        Updating participant
+    </span>
 </header>
 <div id="home-content" class="content">
     <router-outlet></router-outlet>
