Change so only browserService open is used

--- a/client/src/heartsteps/fitbit/fitbit-auth.html
+++ b/client/src/heartsteps/fitbit/fitbit-auth.html
@@ -6,4 +6,5 @@
     class="heartsteps-primary-button"
     >
     Connect to Fitbit
-</button>    
+</button>
+<button (click)="update()">Check Fitbit Authroization</button>
